# larp

./: PROJECT_PLAN.md  README.md  ingest.py  main.py  pyproject.toml  test_main.py
chroma_db/: chroma.sqlite3
documents/: test.txt
