[tool.poetry]
name = "simple-rag"
version = "0.1.0"
description = "Simple RAG solution with crewAI and local LLM"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
crewai = "^0.126.0"
langchain = "^0.3.25"
langchain_community = "^0.3.25"
pypdf = "^5.6.0"
chromadb = "^1.0.12"
ollama = "^0.5.1"
sentence-transformers = "^4.1.0"
langchain-huggingface = "^0.3.0"
unstructured = "^0.17.2"
pdf2image = "^1.17.0"
pi_heif = "^0.22.0"
unstructured_inference = "^1.0.5"
pytesseract = "^0.3.13"
unstructured_pytesseract = "^0.3.15"

[tool.poetry.group.dev.dependencies]
black = "^24.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"